[package]
name = "chesshound"
version = "0.1.0"
authors = ["Gage Christensen <grchr4000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgn-reader = "0.18.0"

[dev-dependencies]
float-cmp = "0.5.2"
rstest = "0.6.4"
