[package]
name = "chesshound"
version = "0.1.0"
authors = ["Gage Christensen <grchr4000@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "A library for supporting statistical analysis of sets of chess games."
repository = "https://github.com/grchristensen/chesshound"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4"
pgn-reader = "0.18.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.51"

[dev-dependencies]
float-cmp = "0.5.2"
rstest = "0.6.4"
